# huawei-coding-test

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  coding test.docx
common/: CMakeLists.txt  common.h
task-1/: CMakeLists.txt  Solver.cpp  Solver.h  input.txt  main.cpp
task-1/test/: CMakeLists.txt  SolverTest.cpp
task-2/: CMakeLists.txt  Solver.cpp  Solver.h  main.cpp
task-2/test/: CMakeLists.txt  SolverTest.cpp
task-3/: CMakeLists.txt  Solver.cpp  Solver.h  main.cpp
task-3/test/: CMakeLists.txt  SolverTest.cpp
